[project]
name = "python_coreml_stable_diffusion"
version = "1.1.2a0+python12"
description = "Run Stable Diffusion on Apple Silicon with Core ML (Python and Swift)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coremltools>=8.0",
    "diffusers[torch]==0.30.2",
    "diffusionkit==0.4.0",
    "invisible-watermark>=0.2.0",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "transformers==4.44.2",
]
